--- a/.travis.yml
+++ b/.travis.yml
@@ -48,6 +48,10 @@ matrix:
     # It will not stop the jobs from running.
     fast_finish: true
 
+    # Allow failures on php 5.6
+    allow_failures:
+      - php: 5.6
+
     include:
           # Run grunt/npm install on lowest supported npm version
         - php: 7.1
